disable 2 matching cards

--- a/index.html
+++ b/index.html
@@ -19,67 +19,67 @@
     </div>
 
     <div class="container">
-        <div class="card">
+        <div class="card" data-framework="happy">
             <div class="emoji happy">😀</div>
             <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="happy">
             <div class="emoji happy">😀</div>
             <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="inLove">
             <div class="emoji inLove">😍</div>
             <div class="back-card">🍪</div>                        
         </div>
-        <div class="card">
+        <div class="card" data-framework="inLove">
             <div class="emoji inLove">😍</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="angry">
             <div class="emoji angry">😡</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="angry">
             <div class="emoji angry">😡</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="party">
             <div class="emoji party">🥳️</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="party">
             <div class="emoji party">🥳️</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="laugh">
             <div class="emoji laugh">😂</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="laugh">
             <div class="emoji laugh">😂</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="sad">
             <div class="emoji sad">😢</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="sad">
             <div class="emoji sad">😢</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="smart">
             <div class="emoji smart">🤓</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="smart">
             <div class="emoji smart">🤓</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="cool">
             <div class="emoji cool">😎</div>
              <div class="back-card">🍪</div>
         </div>
-        <div class="card">
+        <div class="card" data-framework="cool">
             <div class="emoji cool">😎</div>
              <div class="back-card">🍪</div>
         </div>
